syntax = "proto3";

option java_package = "cn.migu.selection.proto.base";

message VoteActionResponse{
	 string pluginCode = 1;
     string status = 2;
     string isvisable = 3;
     VoteActionData data = 4;
     
}

message VoteActionData{
	 string voteCode = 1;  //投票操作返回码
	 string voteMessage = 2; //投票返回提示语
     
}
